--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,50 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
-  <!-- Подключаемые файлы, метатеги, название страницы -->
+    <!-- Подключаемые файлы, метатеги, название страницы -->
 
-  <!-- Кодировка страницы-->
-  <meta charset="utf-8"/> 
-  <title>Название страницы</title>
-</head>
-<body>
-  <!-- Тело сайта, отвечает за вывод на страницу-->
+    <!-- Кодировка страницы-->
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Название страницы</title>
+  </head>
+
   <header>
-  <!-- Шапка сайта-->
+    <div class="headLeft">
+        <div class="head">DREAMSHARE</div>
+    </div>
+    <div class="headRight">
+      <div class="head">
+        <div>Log In</div>
+        <div>
+          <div>Sign Up</div>
+        </div>
+      </div>
+    </div>
   </header>
-  <nav>
-  <!-- Навигация -->
-  </nav>
-  <footer>
-  <!-- Подвал сайта-->
-  </footer>
-</body>
+  <body>
+    <div class="intro">
+      <div class="container">
+          <h1>
+              SHARE YOUR HOLIDAY DREAMS
+            </h1>
+        </div>
+      <div class="container">
+        <h3>
+            And find the perfect parther to fullfill it
+        </h3>
+      </div>
+      <div class="container">
+         <div>
+             <div class="button">
+                Find your holiday partner
+             </div>
+         </div> 
+        </div>
+    </div>
+    1<!-- Тело сайта, отвечает за вывод на страницу-->
+
+    <nav>3<!-- Навигация --></nav>
+    <footer>4<!-- Подвал сайта--></footer>
+  </body>
 </html>
