add style, BEM, background

--- a/Index.html
+++ b/Index.html
@@ -9,34 +9,35 @@
     <title>Название страницы</title>
   </head>
 
-  <header>
-    <div class="headLeft">
-        <div class="head">DREAMSHARE</div>
-    </div>
-    <div class="headRight">
-      <div class="head">
-        <div>Log In</div>
-        <div>
-          <div>Sign Up</div>
+  
+  <body>
+    <header>
+      <div class="headear__box1">
+          <div class="headear__logo">DREAMSHARE</div>
+      </div>
+      <div class="headear__box2">
+        <div class="headear__box3">
+          <div class="headear-Log1">Log In</div>
+          <div class="headear-Log2">
+            <div class="headear-Sign">Sign Up</div>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
-  <body>
-    <div class="intro">
-      <div class="container">
+    </header>
+    <div class="main-page">
+      <div class="main-page__box">
           <h1>
               SHARE YOUR HOLIDAY DREAMS
             </h1>
         </div>
-      <div class="container">
+      <div class="main-page__box">
         <h3>
             And find the perfect parther to fullfill it
         </h3>
       </div>
-      <div class="container">
+      <div class="main-page__box">
          <div>
-             <div class="button">
+             <div class="main-page__button">
                 Find your holiday partner
              </div>
          </div> 
