add partner nad about

--- a/Index.html
+++ b/Index.html
@@ -6,44 +6,123 @@
     <!-- Кодировка страницы-->
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Название страницы</title>
+    <title>Тестовая верстка Бирев Алексей</title>
   </head>
 
-  
   <body>
     <header>
-      <div class="headear__box1">
+      <div class="background"></div>
+      <div class="head">
+        <div class="headear__box1">
           <div class="headear__logo">DREAMSHARE</div>
+        </div>
+        <div class="headear__box2">
+          <div class="headear__box3">
+            <div class="headear-Log1">Log In</div>
+            <div class="headear-Log2">
+              <div class="headear-Sign">Sign Up</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="headear__box2">
-        <div class="headear__box3">
-          <div class="headear-Log1">Log In</div>
-          <div class="headear-Log2">
-            <div class="headear-Sign">Sign Up</div>
+      <div class="main-page">
+        <div class="main-page__box">
+          <h1>SHARE YOUR HOLIDAY DREAMS</h1>
+        </div>
+        <div class="main-page__box">
+          <h3>And find the perfect parther to fullfill it</h3>
+        </div>
+        <div class="main-page__box">
+          <div>
+            <div class="main-page__button">Find your holiday partner</div>
           </div>
         </div>
       </div>
     </header>
-    <div class="main-page">
-      <div class="main-page__box">
-          <h1>
-              SHARE YOUR HOLIDAY DREAMS
-            </h1>
+    <div class="about">
+      <div class="about__title">How Dreamshare works?</div>
+      <div class="about_container">
+        <div class="about_box">
+          <div class="about_box_img1"></div>
+          <div class="about_box_step_btn">STEP 1</div>
+          <div class="about_box__title">Sed leo enim, condimentum</div>
+          <p class="about_box_text">
+            Quisque libero libero, dictum non turpis in, luctus semper lorem.
+            Donec rhoncus a leo sit amet facilisis.
+          </p>
         </div>
-      <div class="main-page__box">
-        <h3>
-            And find the perfect parther to fullfill it
-        </h3>
+        <div class="about_box">
+          <div class="about_box_img2"></div>
+          <div class="about_box_step_btn">STEP 2</div>
+          <div class="about_box__title">Morbi velit risus</div>
+          <p class="about_box_text">
+            Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit
+            amet porttitor est.
+          </p>
+        </div>
+
+        <div class="about_box">
+          <div class="about_box_img3"></div>
+          <div class="about_box_step_btn">STEP 3</div>
+          <div class="about_box__title">Sed leo enim, condimentum</div>
+          <p class="about_box_text">
+            Quisque libero libero, dictum non turpis in, luctus semper lorem.
+            Donec rhoncus a leo sit amet facilisis.
+          </p>
+        </div>
       </div>
-      <div class="main-page__box">
-         <div>
-             <div class="main-page__button">
-                Find your holiday partner
-             </div>
-         </div> 
-        </div>
     </div>
-    1<!-- Тело сайта, отвечает за вывод на страницу-->
+    <div class="partners">
+      <div class="partner_title">Meet a partner for your best holiday</div>
+      <div class="parthner_container">
+        <div class="partner_box">
+          <div class="partner_box_img1">
+            <div class="partner_box_img_ic1">
+              <img src="images/icon1.png" alt="icon1" class="partner_icon" />
+            </div>
+          </div>
+          <div class="partner_name">Bradley Hunter</div>
+          <p class="parner_text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+        <div class="partner_box">
+          <div class="partner_box_img2">
+            <div class="partner_box_img_ic2">
+              <img src="images/icon2.png" alt="icon2" class="partner_icon" />
+            </div>
+          </div>
+          <div class="partner_name">Bradley Hunter</div>
+          <p class="parner_text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+        <div class="partner_box">
+          <div class="partner_box_img3">
+            <div class="partner_box_img_ic3">
+              <img src="images/icon3.png" alt="icon3" class="partner_icon" />
+            </div>
+          </div>
+          <div class="partner_name">Bradley Hunter</div>
+          <p class="parner_text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+        <div class="partner_box">
+          <div class="partner_box_img4">
+            <div class="partner_box_img_ic4">
+              <img src="images/icon4.png" alt="icon4" class="partner_icon" />
+            </div>
+          </div>
+          <div class="partner_name">Bradley Hunter</div>
+          <p class="parner_text">
+            Based in Chicago. I love playing tennis and loud music.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    1111<!-- Тело сайта, отвечает за вывод на страницу-->
 
     <nav>3<!-- Навигация --></nav>
     <footer>4<!-- Подвал сайта--></footer>
