--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,11 @@
     <header>
       <div class="background"></div>
       <div class="head">
-        <div class="headear__box1">
+        <div class="headear_box1">
           <div class="headear__logo">DREAMSHARE</div>
         </div>
-        <div class="headear__box2">
-          <div class="headear__box3">
+        <div class="headear_box2">
+          <div class="headear_box3">
             <a href="#" class="headear-Log1">Log In</a>
             <div class="headear-Log2">
               <a href="#" class="headear-Sign">Sign Up</a>
@@ -26,17 +26,9 @@
         </div>
       </div>
       <div class="main-page">
-        <div class="main-page__box">
-          <h1>SHARE YOUR HOLIDAY DREAMS</h1>
-        </div>
-        <div class="main-page__box">
-          <h3>And find the perfect parther to fullfill it</h3>
-        </div>
-        <div class="main-page__box">
-          <div>
-            <a href="#" class="main-page__button">Find your holiday partner</a>
-          </div>
-        </div>
+        <h1>SHARE YOUR HOLIDAY DREAMS</h1>
+        <h3>And find the perfect parther to fullfill it</h3>
+        <a href="#" class="main-page__button">Find your holiday partner</a>
       </div>
     </header>
     <div class="about">
