--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,14 @@
     <div class="header">
       <div class="background"></div>
       <div class="head">
-        <div class="headear_box1">
+        <div class="headear-box1">
           <div class="headear__logo">DREAMSHARE</div>
         </div>
-        <div class="headear_box2">
-          <div class="headear_box3">
-            <a href="#" class="headear__Log1">Log In</a>
-            <div class="headear_Log2">
-              <a href="#" class="headear__Sign">Sign Up</a>
+        <div class="headear-box2">
+          <div class="headear-box3">
+            <a href="#" class="headear__log">Log In</a>
+            <div class="headear-box4">
+              <a href="#" class="headear__sign">Sign Up</a>
             </div>
           </div>
         </div>
@@ -31,31 +31,31 @@
 
     <div class="about">
       <div class="title">How Dreamshare works?</div>
-      <div class="about_container">
-        <div class="about_box">
-          <div class="about_box_img1"></div>
-          <div class="about_box_step_btn">STEP 1</div>
-          <div class="about_box__title">Sed leo enim, condimentum</div>
-          <p class="about_box_text">
+      <div class="about-container">
+        <div class="about-box">
+          <div class="about-box__img1"></div>
+          <div class="about-box__btnStep">STEP 1</div>
+          <div class="about-box__title">Sed leo enim, condimentum</div>
+          <p class="about-box__text">
             Quisque libero libero, dictum non turpis in, luctus semper lorem.
             Donec rhoncus a leo sit amet facilisis.
           </p>
         </div>
-        <div class="about_box">
-          <div class="about_box_img2"></div>
-          <div class="about_box_step_btn">STEP 2</div>
-          <div class="about_box__title">Morbi velit risus</div>
-          <p class="about_box_text">
+        <div class="about-box">
+          <div class="about-box__img2"></div>
+          <div class="about-box__btnStep">STEP 2</div>
+          <div class="about-box__title">Morbi velit risus</div>
+          <p class="about-box__text">
             Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit
             amet porttitor est.
           </p>
         </div>
 
-        <div class="about_box">
-          <div class="about_box_img3"></div>
-          <div class="about_box_step_btn">STEP 3</div>
-          <div class="about_box__title">Sed leo enim, condimentum</div>
-          <p class="about_box_text">
+        <div class="about-box">
+          <div class="about-box__img3"></div>
+          <div class="about-box__btnStep">STEP 3</div>
+          <div class="about-box__title">Sed leo enim, condimentum</div>
+          <p class="about-box__text">
             Quisque libero libero, dictum non turpis in, luctus semper lorem.
             Donec rhoncus a leo sit amet facilisis.
           </p>
@@ -64,109 +64,109 @@
     </div>
     <div class="partners">
       <div class="title">Meet a partner for your best holiday</div>
-      <div class="parthner_container">
-        <div class="partner_box">
-          <div class="partner_box_img1">
-            <div class="partner_box_img_ic1">
-              <img src="images/icon1.png" alt="icon1" class="partner_icon" />
+      <div class="parthner-container">
+        <div class="partner-box">
+          <div class="partner-box__img1">
+            <div class="partner-box__img-ic1">
+              <img src="images/icon1.png" alt="icon1" class="partner__icon" />
             </div>
           </div>
-          <div class="partner_name">Bradley Hunter</div>
-          <p class="parner_text">
+          <div class="partner__name">Bradley Hunter</div>
+          <p class="parner__text">
             Based in Chicago. I love playing tennis and loud music.
           </p>
         </div>
-        <div class="partner_box">
-          <div class="partner_box_img2">
-            <div class="partner_box_img_ic2">
-              <img src="images/icon2.png" alt="icon2" class="partner_icon" />
+        <div class="partner-box">
+          <div class="partner-box__img2">
+            <div class="partner-box__img-ic2">
+              <img src="images/icon2.png" alt="icon2" class="partner__icon" />
             </div>
           </div>
-          <div class="partner_name">Heather Walker</div>
-          <p class="parner_text">
+          <div class="partner__name">Heather Walker</div>
+          <p class="parner__text">
             I'm a happy person that loves cats and climbing on mountains.
           </p>
         </div>
-        <div class="partner_box">
-          <div class="partner_box_img3">
-            <div class="partner_box_img_ic3">
-              <img src="images/icon3.png" alt="icon3" class="partner_icon" />
+        <div class="partner-box">
+          <div class="partner-box__img3">
+            <div class="partner-box__img-ic3">
+              <img src="images/icon3.png" alt="icon3" class="partner__icon" />
             </div>
           </div>
-          <div class="partner_name">Lucas Marsha</div>
-          <p class="parner_text">
+          <div class="partner__name">Lucas Marsha</div>
+          <p class="parner__text">
             I get my inspiration from nature and objects around me. I have a
             passion to colours, typography and skateboards.
           </p>
         </div>
-        <div class="partner_box">
-          <div class="partner_box_img4">
-            <div class="partner_box_img_ic4">
-              <img src="images/icon4.png" alt="icon4" class="partner_icon" />
+        <div class="partner-box">
+          <div class="partner-box__img4">
+            <div class="partner-box__img-ic4">
+              <img src="images/icon4.png" alt="icon4" class="partner__icon" />
             </div>
           </div>
-          <div class="partner_name">Bradley Hunter</div>
-          <p class="parner_text">
+          <div class="partner__name">Bradley Hunter</div>
+          <p class="parner__text">
             Based in Chicago. I love playing tennis and loud music.
           </p>
         </div>
       </div>
-      <a href="#" class="partner_btn">See other partners</a>
+      <a href="#" class="partner__btn">See other partners</a>
     </div>
     <div class="ideas">
       <div class="title">Discover holiday activity ideas</div>
-      <div class="ideas_grid">
-        <div class="ideas_item1">
-          <div class="ideas_item_bg1"></div>
-          <div class="ideas_title">Sport and Activity</div>
+      <div class="ideas-grid">
+        <div class="ideas-item1">
+          <div class="ideas-item__bg1"></div>
+          <div class="ideas__title">Sport and Activity</div>
         </div>
-        <div class="ideas_item1">
-          <div class="ideas_item_bg2"></div>
-          <div class="ideas_title">Wellnes and Health</div>
+        <div class="ideas-item1">
+          <div class="ideas-item__bg2"></div>
+          <div class="ideas__title">Wellnes and Health</div>
         </div>
-        <div class="ideas_item1">
-          <div class="ideas_item_bg3"></div>
-          <div class="ideas_title">
+        <div class="ideas-item1">
+          <div class="ideas-item__bg3"></div>
+          <div class="ideas__title">
             Extreme Sports <br />
             and Expeditions
           </div>
         </div>
-        <div class="ideas_item1">
-          <div class="ideas_item_bg4"></div>
-          <div class="ideas_title">Games</div>
+        <div class="ideas-item1">
+          <div class="ideas-item__bg4"></div>
+          <div class="ideas__title">Games</div>
         </div>
-        <div class="ideas_item2">
-          <div class="ideas_item_bg5"></div>
-          <div class="ideas_title">Culture and Education</div>
+        <div class="ideas-item2">
+          <div class="ideas-item__bg5"></div>
+          <div class="ideas__title">Culture and Education</div>
         </div>
-        <div class="ideas_item3">
-          <div class="ideas_item_bg6"></div>
-          <div class="ideas_title">Relaxation</div>
+        <div class="ideas-item3">
+          <div class="ideas-item__bg6"></div>
+          <div class="ideas__title">Relaxation</div>
         </div>
-        <div class="ideas_item1">
-          <div class="ideas_item_bg7"></div>
-          <div class="ideas_title">Travelling</div>
+        <div class="ideas-item1">
+          <div class="ideas-item__bg7"></div>
+          <div class="ideas__title">Travelling</div>
         </div>
       </div>
     </div>
-    <div class="serchParnersBox">
+    <div class="serch-parners-box">
       <div class="title">Discover holiday activity ideas</div>
-      <p class="parner_search_text">Hi! What are your holiday interests?</p>
+      <p class="parner-search__text">Hi! What are your holiday interests?</p>
       <form class="serch">
         <input
-          class="input_interests"
+          class="input-interests"
           type="text"
           placeholder="Enter your interests"
         />
-        <a href="#" class="searchParnersBtn">Search partners</a>
+        <a href="#" class="search-parners__btn">Search partners</a>
       </form>
     </div>
     <footer>
       <nav>
-        <div class="nav_promo">Dreamshare</div>
-        <div class="nav_box">
+        <div class="nav__promo">Dreamshare</div>
+        <div class="nav-box">
           <h6>Company</h6>
-          <ul class="nav_list">
+          <ul class="nav__list">
             <li>About</li>
             <li>Contacts</li>
             <li>Press</li>
@@ -174,8 +174,8 @@
           </ul>
         </div>
 
-        <div class="nav_box"><h6>Partner</h6>
-          <ul class="nav_list">
+        <div class="nav-box"><h6>Partner</h6>
+          <ul class="nav__list">
             
             <li>1</li>
             <li>1</li>
@@ -183,7 +183,7 @@
             <li>1</li>
           </ul>
         </div>
-        <div class="nav_logo">
+        <div class="nav__logo">
           Designed by
           <br />
           <img src="images/logo.jpg" />
