rename class headear-box

--- a/Index.html
+++ b/Index.html
@@ -10,13 +10,13 @@
     <div class="header">
       <div class="background"></div>
       <div class="head">
-        <div class="headear-box1">
+        <div class="headear-boxLogo">
           <div class="headear__logo">DREAMSHARE</div>
         </div>
-        <div class="headear-box2">
-          <div class="headear-box3">
-            <a href="#" class="headear__log">Log In</a>
-            <div class="headear-box4">
+        <div class="headear-boxLogin">
+          <div class="headear-containerLogin">
+            <a href="#" class="headear__login">Log In</a>
+            <div class="headear-boxSign">
               <a href="#" class="headear__sign">Sign Up</a>
             </div>
           </div>
