--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
       <div class="title">How Dreamshare works?</div>
       <div class="about-container">
         <div class="about-box">
-          <div class="about-box__img1"></div>
+          <div class="about-box__img about-box__img_1"></div>
           <div class="about-box__btnStep">STEP 1</div>
           <div class="about-box__title">Sed leo enim, condimentum</div>
           <p class="about-box__text">
@@ -42,7 +42,7 @@
           </p>
         </div>
         <div class="about-box">
-          <div class="about-box__img2"></div>
+          <div class="about-box__img about-box__img_2"></div>
           <div class="about-box__btnStep">STEP 2</div>
           <div class="about-box__title">Morbi velit risus</div>
           <p class="about-box__text">
@@ -52,7 +52,7 @@
         </div>
 
         <div class="about-box">
-          <div class="about-box__img3"></div>
+          <div class="about-box__img about-box__img_3"></div>
           <div class="about-box__btnStep">STEP 3</div>
           <div class="about-box__title">Sed leo enim, condimentum</div>
           <p class="about-box__text">
@@ -66,8 +66,8 @@
       <div class="title">Meet a partner for your best holiday</div>
       <div class="parthner-container">
         <div class="partner-box">
-          <div class="partner-box__img1">
-            <div class="partner-box__img-ic1">
+          <div class="partner-box-img partner-box-img_1">
+            <div class="partner-box-img-ic partner-box-img-ic_red">
               <img src="images/icon1.png" alt="icon1" class="partner__icon" />
             </div>
           </div>
@@ -77,8 +77,8 @@
           </p>
         </div>
         <div class="partner-box">
-          <div class="partner-box__img2">
-            <div class="partner-box__img-ic2">
+          <div class="partner-box-img partner-box-img_2">
+            <div class="partner-box-img-ic partner-box-img-ic_green">
               <img src="images/icon2.png" alt="icon2" class="partner__icon" />
             </div>
           </div>
@@ -88,8 +88,8 @@
           </p>
         </div>
         <div class="partner-box">
-          <div class="partner-box__img3">
-            <div class="partner-box__img-ic3">
+          <div class="partner-box-img partner-box-img_3">
+            <div class="partner-box-img-ic partner-box-img-ic_yelow">
               <img src="images/icon3.png" alt="icon3" class="partner__icon" />
             </div>
           </div>
@@ -100,8 +100,8 @@
           </p>
         </div>
         <div class="partner-box">
-          <div class="partner-box__img4">
-            <div class="partner-box__img-ic4">
+          <div class="partner-box-img partner-box-img_4">
+            <div class="partner-box-img-ic partner-box-img-ic_blue">
               <img src="images/icon4.png" alt="icon4" class="partner__icon" />
             </div>
           </div>
@@ -116,35 +116,35 @@
     <div class="ideas">
       <div class="title">Discover holiday activity ideas</div>
       <div class="ideas-grid">
-        <div class="ideas-item1">
-          <div class="ideas-item__bg1"></div>
+        <div class="ideas-item">
+          <div class="ideas-item__bg ideas-item__bg_1"></div>
           <div class="ideas__title">Sport and Activity</div>
         </div>
-        <div class="ideas-item1">
-          <div class="ideas-item__bg2"></div>
+        <div class="ideas-item">
+          <div class="ideas-item__bg ideas-item__bg_2"></div>
           <div class="ideas__title">Wellnes and Health</div>
         </div>
-        <div class="ideas-item1">
-          <div class="ideas-item__bg3"></div>
+        <div class="ideas-item">
+          <div class="ideas-item__bg ideas-item__bg_3"></div>
           <div class="ideas__title">
             Extreme Sports <br />
             and Expeditions
           </div>
         </div>
-        <div class="ideas-item1">
-          <div class="ideas-item__bg4"></div>
+        <div class="ideas-item">
+          <div class="ideas-item__bg ideas-item__bg_4"></div>
           <div class="ideas__title">Games</div>
         </div>
-        <div class="ideas-item2">
-          <div class="ideas-item__bg5"></div>
+        <div class="ideas-item ideas-item_2">
+          <div class="ideas-item__bg ideas-item__bg_5"></div>
           <div class="ideas__title">Culture and Education</div>
         </div>
-        <div class="ideas-item3">
-          <div class="ideas-item__bg6"></div>
+        <div class="ideas-item ideas-item_3">
+          <div class="ideas-item__bg ideas-item__bg_6"></div>
           <div class="ideas__title">Relaxation</div>
         </div>
-        <div class="ideas-item1">
-          <div class="ideas-item__bg7"></div>
+        <div class="ideas-item">
+          <div class="ideas-item__bg ideas-item__bg_7"></div>
           <div class="ideas__title">Travelling</div>
         </div>
       </div>
